hphp/test/zend/good/ext-standard-strings/bug40915.php
<?php

$str = (binary)"a\000z";

var_dump(addslashes($str));
var_dump(addcslashes($str, (binary)""));
var_dump(addcslashes($str, (binary)"\000z"));
var_dump(addcslashes( $str, (binary)"z"));

echo "Done\n";
?>